--- a/views/_booking_management_external_invoicing_tab.erb
+++ b/views/_booking_management_external_invoicing_tab.erb
@@ -9,6 +9,7 @@
           <span class="entity-fieldvalue">
                        <input type="text" maxlength="40" size="25" name="external_invoice_number" id="external_invoice_number"
                               value="<%%=entity.external_invoice_number%>"/>
+                       <button type="button" class="form-button" name="next_external_invoice_number" id="next_external_invoice_number"><%=t.booking_management.form.next_external_invoice_number%></button>
                 </span>
         </div>
         <div class="entity-field">
