--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -237,9 +237,11 @@
           <li class="no-border no-background top-space" style="border:none;background:none">
               <a name="related_bookings_tab" href="#related_bookings_tab"><%= t.booking_management.form.related_bookings %></a>
           </li>
+          <% if booking_addon_simple_invoicing %>
           <li class="no-border no-background top-space" style="border:none; backgrond:none">
               <a name="external_invoicing_tab" href="#external_invoicing_tab"><%=t.booking_management.form.external_invoicing_tab%></a>
           </li>
+          <% end %>
           <li class="no-border no-background top-space" style="border:none;background:none">
               <a name="notifications_tab" href="#notifications_tab"><%= t.booking_management.form.notifications.title %></a>
           </li>
@@ -307,9 +309,11 @@
            <%= partial :booking_management_related_bookings %>
          </div>
 
+         <% if booking_addon_simple_invoicing %>
          <div id="external_invoicing_tab" class="top-margin-1line">
            <%= partial :booking_management_external_invoicing_tab %>
          </div>
+         <% end %>
 
          <div id="other_tab"  class="top-margin-1line">
          
