--- a/views/config_booking.erb
+++ b/views/config_booking.erb
@@ -47,7 +47,7 @@
                 <%= render_variable_textarea('booking.notification_email', t.booking_settings.form.notification_email) %>
                 <%= render_variable_checkbox_boolean('booking.send_notifications',
                                                      t.booking_settings.form.send_notifications) %>
-                <%= render_variable_checkbox_boolean('booking.booking.send_notifications_new_reservations_from_backoffice',
+                <%= render_variable_checkbox_boolean('booking.send_notifications_new_reservations_from_backoffice',
                                                      t.booking_settings.form.send_notifications_new_reservations_from_backoffice) %>
                 <div class="formrow-botonera top-separator top-space">
                   <input type="submit" value="<%=t.entitymanagement.update%>" class="button blue-button">
