booking operator menu

--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -37,6 +37,7 @@
                     '/admin/booking/customers',
                     '/admin/booking/new',
                     '/admin/booking/bookings',
+                    '/admin/booking/edit/pickup-return',
                     '/admin/booking/planning2',
                     '/admin/booking/monthly-occupation',
                     '/admin/booking/reports/pickup-return',
