--- a/views/_booking_management_additional_drivers.erb
+++ b/views/_booking_management_additional_drivers.erb
@@ -1,4 +1,4 @@
-      <form name="driver" style="border:1px solid #EEE">
+      <form name="additional_drivers" style="border:1px solid #EEE">
         <input type="hidden" name="id" value="<%%=entity.id%>"/>
         <div class="container_12">
           <div class="grid_6">
@@ -22,7 +22,8 @@
                   </span>
                 </div>
               </div>               
-              <% if booking_item_family.driver_license %> 
+              <% if booking_item_family.driver_license %>
+                <div class="top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_document%></div>
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id %></span>
@@ -57,6 +58,7 @@
                      </span>
                   </div>
                 </div>
+                <div class="top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_license%></div>
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
@@ -115,7 +117,8 @@
                   </span>
                 </div>
               </div>               
-              <% if booking_item_family.driver_license %> 
+              <% if booking_item_family.driver_license %>
+                <div class="top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_document%></div>
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id %></span>
@@ -151,7 +154,7 @@
                      </span>
                   </div>
                 </div>
-
+                <div class="top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_license%></div>
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
@@ -192,6 +195,7 @@
           </div>
         </div>
         <div class="navigation-bar bottom-margin">
+          <div id="additional_drivers_error_summary" class="alert alert-danger" style="display: none; margin: 10px"></div>
               <div class="navigation-bar-crud-buttons right-float right-margin">
                 <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
               </div>
