--- a/views/_booking_management_customer.erb
+++ b/views/_booking_management_customer.erb
@@ -3,7 +3,7 @@
             <input type="hidden" name="id" value="<%%=entity.id%>"/>
             <div class="element_template">
               <div class="entity-field">
-                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_name %></span>
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_name %><span class="mandatoryfield">*</span></span>
                 <span class="entity-fieldvalue">
                     <input type="text" maxlength="40" size="12" name="customer_name" id="customer_name"
                       value="<%%=entity.customer_name%>"/>
@@ -25,10 +25,10 @@
             </div>
             <div class="element_template">
               <div class="entity-field">
-                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_email %></span>
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.customer_email %><span class="mandatoryfield">*</span></span>
                 <span class="entity-fieldvalue">
-                    <input type="text" maxlength="40" size="26" name="customer_email" id="customer_email"
-                      value="<%%=entity.customer_email%>" style="width:100%"/>
+                    <input type="text" maxlength="40" size="35" name="customer_email" id="customer_email"
+                      value="<%%=entity.customer_email%>"/>
                 </span>
               </div>
             </div>
@@ -39,6 +39,7 @@
               </div>
             </div>
             <div class="navigation-bar bottom-margin">
+              <div id="customer_error_summary" class="alert alert-danger" style="display: none; margin: 10px"></div>
               <div class="navigation-bar-crud-buttons right-float right-margin">
                 <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
               </div>
