--- a/views/_booking_management_driver.erb
+++ b/views/_booking_management_driver.erb
@@ -1,8 +1,8 @@
-           <form name="driver" style="border:1px solid #EEE">
+         <form name="driver" style="border:1px solid #EEE">
            <input type="hidden" name="id" value="<%%=entity.id%>"/>
            <div class="container_12">
             <div class="grid_6">
-               <div class="more_contrast_text top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_title%></div>            
+              <div class="more_contrast_text top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_title%></div>
               <div class="element_template">
                 <div class="entity-field">
                   <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_name %></span>
@@ -13,7 +13,7 @@
                       value="<%%=entity.driver_surname%>"/>
                   </span>
                 </div>
-              </div> 
+              </div>
               <div class="element_template">
                 <div class="entity-field">
                   <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_date_of_birth %></span>
@@ -21,7 +21,8 @@
                      <input type="text" name="driver_date_of_birth" id="driver_date_of_birth" class="date_control" size="15" maxlength="10"/>
                   </span>
                 </div>
-              </div> 
+              </div>
+              <div class="top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_document%></div>
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_document_id %></span>
@@ -56,7 +57,8 @@
                      </span>
                 </div>
               </div>
-              <% if booking_item_family.driver_license %> 
+              <% if booking_item_family.driver_license %>
+              <div class="top-margin" style="text-decoration:underline; margin-left:5px"><%=t.booking_management.form.driver_license%></div>
               <div class="element_template">
                   <div class="entity-field">
                      <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.driver_license_number %></span>
@@ -161,8 +163,9 @@
             </div>   
            </div>
             <div class="navigation-bar bottom-margin">
+              <div id="driver_error_summary" class="alert alert-danger" style="display: none; margin: 10px"></div>
               <div class="navigation-bar-crud-buttons right-float right-margin">
                 <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
               </div>
             </div> 
-           </form>
+         </form>
