--- a/views/resources_occupation.erb
+++ b/views/resources_occupation.erb
@@ -66,7 +66,7 @@
         <div class="container_12">
           <% value[:available_stock].each do |v| %>
           <div class="grid_3">
-            <div class="guiblock"><%if value[:automatically_preassigned_stock].include?(v)%><%=v%>*<%else%><b><%=v%></b><%end%></div>
+            <div class="guiblock"><%if value[:automatically_preassigned_stock].include?(v)%><em></rm><%=v%>*</em><%else%><b><%=v%></b><%end%></div>
           </div> 
           <% end %>
         </div>
