new information of customer in order items

--- a/views/_shopping_cart_summary.erb
+++ b/views/_shopping_cart_summary.erb
@@ -50,7 +50,7 @@
         </div>
         <div class="grid_2">
             <div class="right_text right-margin">
-              <div class="less_contrast_text">TOTAL</div>
+              <div class="less_contrast_text uppercase_text"><%=t.activity_shopping_cart_summary.total%></div>
             </div>
             <div class="left-margin right-margin">
               <div class="right_text more_contrast_text" style="font-size: 1.5em"><%="%.2f" % @shopping_cart.total_cost%>€</div>              
