--- a/views/reserva-online.erb
+++ b/views/reserva-online.erb
@@ -60,9 +60,8 @@
 
 			<!-- The summary header (shown in all the other tabs) -->
 			<div id="other-tabs-header" class="bottom-margin all-border-solid-light rounded">
-				<%= partial :reserva_online_summary_header, :locals => {:booking_item_family => booking_item_family, :booking_item_type => booking_item_type,
-																																:booking_reservation_starts_with => booking_reservation_starts_with,
-																																:promotion_codes_active => promotion_codes_active} %>
+				<%= partial :reserva_online_summary_header, :locals => {:booking_item_family => booking_item_family, :booking_item_type => booking_item_type, :booking_reservation_starts_with => booking_reservation_starts_with,
+					:promotion_codes_active => promotion_codes_active} %>
 			</div>
 
 			<!-- EXTRAS SELECTION TAB -->
