--- a/views/reservation_activities_checkout.erb
+++ b/views/reservation_activities_checkout.erb
@@ -1,22 +1,24 @@
 <style>
   #checkout_container {
-    background-color: #EEE;
+    background-color: white;
   }
 </style>
-<h2>Realizar pedido</h2>
+<h2><%=t.activity_checkout.make_order%></h2>
 
-<div class="container_12 bottom-margin-2lines">
+<div class="container_12 bottom-margin-1line">
 
-  <div class="grid_5">
-    <h3 class="guiblock smaller_text">Resumen del pedido</h3>
+  <div class="grid_12">
+    <h3 class="guiblock smaller_text"><%=t.activity_checkout.order_summary%></h3>
     <div class="smaller_text">
       <%= partial :shopping_cart_summary %>
     </div>
   </div>
+</div>
 
-  <div class="grid_7">
-  	<div class="left-margin">
-    <h3 class="guiblock smaller_text">Datos de la reserva</h3>
+<div class="container_12 bottom-margin-1line">
+  <div class="grid_12">
+  	<div>
+    <h3 class="guiblock smaller_text"><%=t.activity_checkout.reservation_data%></h3>
     <form name="activities_checkout_form" id="activities_checkout_form" class="guiblock top-margin" action="/p/activities/shopping-cart-order" method="post">
       	<div id="checkout_container" class="all-space smaller_text">
 	          <div class="formrow">
@@ -41,6 +43,103 @@
 	            <textarea id="comments" name="comments" class="fieldcontrol" rows="10" placeholder="<%=t.new_booking.comments.placeholder%>"><%unless @shopping_cart.nil?%><%=@shopping_cart.comments%><%end%></textarea>
 	          </div>	      
 	          <p class="form-reservation-right-column"> <span id="booking_comments_length"></span> <%=t.available_chars%></p>
+
+              <!-- Customer information -->
+
+              <% @shopping_cart.shopping_cart_items.each do |shopping_cart_item| %>
+
+                <% if shopping_cart_item.request_customer_information %>
+
+                  <% activity = shopping_cart_item.item_activity.translate(session[:locale]) %>
+
+                  <br>
+                  <h4 class="activity_customers_title"><%=t.activity_checkout.activity_customers(activity.name)%></h4>
+                  <br>
+
+                  <table class="table smaller_text activity_customers_table">
+                    <thead class="table-header">
+                      <tr>
+                      	<th class="table-header">#</th>
+                        <th class="table-header-title" style="min-width: 230px;"><%=t.activity.item_customer_name%></th>
+                        <% if activity.request_customer_document_id %>
+                          <th class="table-header-title"><%=t.activity.item_customer_document_id%></th>
+                        <% end %>
+                        <% if activity.request_customer_phone %>
+                          <th class="table-header-title"><%=t.activity.item_customer_phone%></th>
+                        <% end %>
+                        <% if activity.request_customer_email %>
+                          <th class="table-header-title"><%=t.activity.item_customer_email%></th>
+                        <% end %>
+                        <% if activity.request_customer_height %>
+                          <th class="table-header-title"><%=t.activity.item_customer_height%></th>
+                        <% end %>
+                        <% if activity.request_customer_weight %>
+                          <th class="table-header-title"><%=t.activity.item_customer_weight%></th>
+                        <% end %>
+                        <% if activity.request_customer_allergies_intolerances%>
+                          <th class="table-header-title"><%=t.activity.item_customer_allergies_intolerances%></th>                         
+                        <% end %>
+                      </tr>
+                    </thead>
+                    <tbody>
+                  	  <% num = 0 %>
+                  	  <% shopping_cart_item.shopping_cart_item_customers.each do |item| %>
+                  	    <% num = num+1 %>
+                  	    <input type="hidden" name="shopping_cart_item_customers[][id]" value="<%=item.id%>"/>
+                        <tr class="table-row">
+                           <td class="table-cell"><%=num%></td>	
+                           <td class="table-cell">
+                              <input name="shopping_cart_item_customers[][customer_name]" type="text" maxlength="80" size="15" value="<%=item.customer_name%>"/>
+                              <input name="shopping_cart_item_customers[][customer_surname]" type="text" maxlength="80" size="15"  value="<%=item.customer_surname%>"/>
+                           </td>
+                           <% if activity.request_customer_document_id %>
+                           <td class="table-cell">
+                              <input name="shopping_cart_item_customers[][customer_document_id]" type="text" maxlength="50" size="10" value="<%=item.customer_document_id%>"/>
+                           </td>
+                           <% end %>
+                           <% if activity.request_customer_phone %>
+                           <td class="table-cell">
+                              <input name="shopping_cart_item_customers[][customer_phone]" type="text" maxlength="15" size="10" value="<%=item.customer_phone%>"/>
+                           </td>                           
+                           <% end %>      
+                           <% if activity.request_customer_email %>
+                           <td class="table-cell">
+                              <input name="shopping_cart_item_customers[][customer_email]" type="text" maxlength="40" size="15" value="<%=item.customer_email%>"/>
+                           </td>                               
+                           <% end %>
+                           <% if activity.request_customer_height %>
+                           <td class="table-cell">
+                             <select name="shopping_cart_item_customers[][customer_height]">
+                 	           <option value=""><%=t.new_booking.height.placeholder%></option>
+                               <% @booking_item_family.height_values.split(',').each do |height|%>
+                                  <option value="<%=height%>" <%if item.customer_height==height%>selected<%end%>><%=height%></option>
+                               <% end %>
+                             </select>
+                           </td>  
+                           <% end %>
+                           <% if activity.request_customer_weight %>
+                           <td class="table-cell">
+                             <select name="shopping_cart_item_customers[][customer_weight]">
+                 	           <option value=""><%=t.new_booking.weight.placeholder%></option>
+                               <% @booking_item_family.weight_values.split(',').each do |weight|%>
+                                 <option value="<%=weight%>" <%if item.customer_weight==weight%>selected<%end%>><%=weight%></option>
+                               <% end %>
+                             </select>
+                           </td>                             
+                           <% end %>
+                           <% if activity.request_customer_allergies_intolerances %>
+                           <td class="table-cell">
+                              <textarea name="shopping_cart_item_customers[][customer_allergies_or_intolerances]" rows="3"><%=item.customer_allergies_or_intolerances%></textarea>
+                           </td>   
+                           <% end %>
+                        </tr>
+                      <% end %>  
+                    </tbody>
+                  </table>
+                <% end %>
+              <% end %>
+
+              <!-- /Customer information -->
 
               <div class="formrow centered_text">
 	        	  <div style="display:inline-block">
